<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.name.NameFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/surnameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameLayout"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/dateLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameInput"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/buttonNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_of_birth" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonNext"
        android:text="@string/button_next"
        style="@style/NextButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRestrictedAccess"
        android:text="@string/restricted_access"
        style="@style/RestrictedAccessStyle"
        app:layout_constraintBottom_toTopOf="@id/buttonNext"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txtFillFields"
        android:text="@string/fill_all_fields"
        style="@style/RestrictedAccessStyle"
        app:layout_constraintBottom_toTopOf="@id/buttonNext"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>